[package]
name = "jetgpio-sys"
authors = ["Rao Zvorovski"]
keywords = ["jetgpio", "gpio", "jetson", "nvidia"]
categories = ["external-ffi-bindings", "hardware-support"]
version = "0.2.3"
edition = "2021"
links = "jetgpio"
description = "Low-level Rust bindings for https://github.com/Rubberazer/JETGPIO"
license = "Unlicense"
repository = "https://github.com/raoz/jetgpio-sys"
exclude = ["vendor/docs", "vendor/EXAMPLES_C", "vendor/EXAMPLES_C++"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
orin = []

[dependencies]

[build-dependencies]
bindgen = "0.68.1"
cc = "1.0"
